# pita

./: Cargo.toml
crates/piece-table/: Cargo.toml  README.md
crates/piece-table/src/: iter.rs  lib.rs
crates/pita-term/: Cargo.toml
crates/pita-term/src/: .main.rs.rustfmt  cursor.rs  hl.rs  main.rs  screen.rs
