[package]
name = "pita-term"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
piece-table.workspace = true
unicode-segmentation = "1.11.0"
unicode-width = "0.1.11"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }